<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@android:color/white"
    android:theme="@style/AppThemeFindReplaceDialog"
    >


    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.44">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/findEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/find" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.44">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/replaceEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/replace..." />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/replaceAllTxtV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/all"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <View
        android:id="@+id/divider"
        android:layout_width="2dp"
        android:layout_height="16dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorGris"
        app:layout_constraintBottom_toBottomOf="@+id/replaceAllTxtV"
        app:layout_constraintEnd_toStartOf="@+id/replaceAllTxtV"
        app:layout_constraintTop_toTopOf="@+id/replaceAllTxtV" />

    <TextView
        android:id="@+id/replaceTxtV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/replace"
        app:layout_constraintBottom_toBottomOf="@+id/replaceAllTxtV"
        app:layout_constraintEnd_toEndOf="@+id/divider"
        app:layout_constraintTop_toTopOf="@+id/replaceAllTxtV" />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/prevImgV"
        android:layout_width="18dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toStartOf="@+id/replaceTxtV"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/replaceTxtV"
        app:srcCompat="@drawable/ic_chevron_left_black_24dp" />

    <TextView
        android:id="@+id/indexTxtV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0/0"
        app:layout_constraintBottom_toBottomOf="@+id/prevImgV"
        app:layout_constraintStart_toEndOf="@+id/prevImgV"
        app:layout_constraintTop_toTopOf="@+id/prevImgV" />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/nextImgV"
        android:layout_width="17dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/prevImgV"
        app:layout_constraintStart_toEndOf="@+id/indexTxtV"
        app:layout_constraintTop_toTopOf="@+id/prevImgV"
        app:srcCompat="@drawable/ic_chevron_right_black_24dp" />

    <TextView
        android:id="@+id/textTxtV"
        android:layout_width="0dp"
        android:layout_height="360dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/replaceTxtV"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/limitTxtV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTxtV" />

    <View
        android:id="@+id/divider2"
        android:layout_width="368dp"
        android:layout_height="1dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/light_blue_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTxtV" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="8dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_check_white_24dp" />
</android.support.constraint.ConstraintLayout>